# fabric-protos-bindings

./: .gitignore  .gitmodules  Makefile  README.md  RELEASING.md  buf.gen.yaml  buf.yaml
fabric-gateway-protos-rust/: Cargo.toml  README.md
fabric-gateway-protos-rust/src/: lib.rs
fabric-protos-go/: README.md  go.mod
fabric-protos-node/: README.md  package.json
fabric-protos-rust/: Cargo.toml  README.md
fabric-protos-rust/src/: lib.rs
