[package]
name = "fabric_gateway_protos"
description = """
Rust library for encoding and decoding Hyperledger Fabric Gateway messages (generated)
"""
version = "0.1.0"
readme = "README.md"
authors = ["Hyperledger Fabric Developers"]
license = "Apache-2.0"
keywords = ["serialization", "protobuf"]
categories = ["encoding"]
repository = "https://github.com/jt-nti/fabric-protos-bindings"
edition = "2018"

[dependencies]
grpc = "0.8.3"
grpc-protobuf = "0.8.3"
protobuf = "~2.18.2"
protoc-rust = "~2.18.2"
