[package]
name = "fabric_gateway_protos"
description = """
Rust library for encoding and decoding Hyperledger Fabric Gateway messages (generated)
"""
version = "0.1.0"
readme = "README.md"
authors = ["Hyperledgendary Developers"]
license = "Apache-2.0"
keywords = ["serialization", "protobuf"]
categories = ["encoding"]
repository = "https://github.com/hyperledgendary/fabric-protos-bindings"
edition = "2018"

[dependencies]
grpc = { git = "https://github.com/stepancheg/grpc-rust" }
grpc-protobuf = { git = "https://github.com/stepancheg/grpc-rust" }
protobuf = { version = "2.23", features = ["with-bytes"] }
